Bug Fix: Kubernetes pod not working issue fix

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: notes-api
-        image: notes-api:latest
+        image: vkassingh/notes-api:latest
         ports:
         - containerPort: 5000
         env:
