Renamed secretKeyRef.name to secret

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -22,5 +22,5 @@ spec:
         - name: MONGODB_URI
           valueFrom:
             secretKeyRef:
-              name: notes-api-secret
+              name: secret
               key: mongodb-uri
