Update: some updates

--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -5,4 +5,4 @@ metadata:
   name: notes-api-secret
 type: Opaque
 data:
-  mongodb-uri: cGFzc3dvcmQxMjM= # base64 encoded value for 'password123'
+  mongodb-uri: bW9uZ29kYitzcnY6Ly80NHZpa2FzcmpwdXQ0NDpQWTFMTmNGSVk0ekhGSDdUQGFwaS1jbHVzdGVyLnQydnlzLm1vbmdvZGIubmV0Lz9yZXRyeVdyaXRlcz10cnVlJnc9bWFqb3JpdHkmYXBwTmFtZT1BUEktY2x1c3Rlcg==   # base64 encoded value for 'password123'
